# agentic-tasks-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.amd.yml  docker-compose.cpu.yml  docker-compose.yml  docker-gpu-guide.md  mcp-config.json  mcp-config.local.json  pyproject.toml  run.ps1
MCP-StdIO/example/: package-lock.json  package.json  website-fetcher.js
src/: assistant_orchestrator.py  main.py
src/configuration/: mcp_config.py
src/utils/: config_helper.py  log_helper.py  task_validator.py
